[tool.poetry]
name = "flask-unsent-letters"
version = "0.1.0"
description = ""
authors = ["tom-prokop <thomas.prokop123@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_unsent_letters"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
